https://test.kuali.org/jira/browse/KRAFDBCK-3117
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6801 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/menu/kra_devref/centad.html
+++ b/menu/kra_devref/centad.html
@@ -53,11 +53,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><a href="#"><img src="../../images/add.png" alt="add" width="16" height="16" border="0" align="absmiddle"></a> <img src="../../images/searchicon.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
               </tr>
               <tr>
-                <td nowrap>Proposal Log</td>
+                <td nowrap>Institutional Proposal</td>
                 <td><a href="#"><img src="../../images/add.png" alt="add" width="16" height="16" border="0" align="absmiddle"></a> <img src="../../images/searchicon.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
               </tr>
               <tr>
-                <td nowrap>Institutional Proposal</td>
+                <td nowrap>Proposal Log</td>
                 <td><a href="#"><img src="../../images/add.png" alt="add" width="16" height="16" border="0" align="absmiddle"></a> <img src="../../images/searchicon.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
               </tr>
               <tr>
@@ -216,6 +216,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <li><a href="#">Current Locks</a></li>
               <li>Current &amp; Pending Support</li>
               <li><a href="#">Grants.gov Opportunity Lookup</a></li>
+              <li><a href="#">Keyword Lookup</a></li>
               <li><a href="#">Non-employee Lookup</a></li>
               <li><a href="#">Sponsor Lookup</a></li><li>Unit Hierarchy</li>
             </ul>
