--- a/menu/kra_devref/dept.html
+++ b/menu/kra_devref/dept.html
@@ -53,25 +53,24 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </div>
           </span> <span class="right"><a href="#"><img src="../../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('../final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
         <div class="body">
-            <table border="0" cellpadding="2" cellspacing="0" >
-              <tr>
-                <td nowrap><span class="style1">Negotiations</span></td>
-                <td><img src="../../images/add1.png" alt="add" width="16" height="16" border="0" align="absmiddle"> <img src="../../images/searchicon1.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
-              </tr>
-              <tr>
-                <td nowrap>Proposal Development</td>
-                <td><a href="#"><img src="../../images/add.png" alt="add" width="16" height="16" border="0" align="absmiddle"></a> <img src="../../images/searchicon.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
-              </tr>
-              <tr>
-                <td nowrap class="style1">Proposal Log</td>
-                <td><img src="../../images/add1.png" alt="add" width="16" height="16" border="0" align="absmiddle"> <img src="../../images/searchicon1.gif" alt="lookup" width="16" height="16" border="0" align="absmiddle"></td>
-              </tr>
-              
-              <tr>
-                <td nowrap><span class="style1">Submitted Proposals</span></td>
-                <td><img src="../../images/add1.png" alt="add" width="16" height="16" border="0" align="absmiddle"> <img src="../../images/searchicon1.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
-              </tr>
-            </table>
+          <table border="0" cellpadding="2" cellspacing="0" >
+            <tr>
+              <td nowrap>Proposal Development</td>
+              <td><a href="#"><img src="../../images/add.png" alt="add" width="16" height="16" border="0" align="absmiddle"></a> <img src="../../images/searchicon.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
+            </tr>
+            <tr>
+              <td nowrap>Institutional Proposal</td>
+              <td><a href="#"><img src="../../images/add.png" alt="add" width="16" height="16" border="0" align="absmiddle"></a> <img src="../../images/searchicon.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
+            </tr>
+            <tr>
+              <td nowrap>Proposal Log</td>
+              <td><a href="#"><img src="../../images/add.png" alt="add" width="16" height="16" border="0" align="absmiddle"></a> <img src="../../images/searchicon.gif" alt="lookup" width="16" height="16" align="absmiddle"></td>
+            </tr>
+            <tr>
+              <td nowrap class="disabled-text">Negotiation</td>
+              <td><img src="../../images/add1.png" alt="add" width="16" height="16" border="0" align="absmiddle"> <img src="../../images/searchicon1.gif" alt="lookup" width="16" height="16" border="0" align="absmiddle"></td>
+            </tr>
+          </table>
         </div>
       </div>
           <div class="portlet">
@@ -148,13 +147,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </div>
           </span> <span class="right"><a href="#"><img src="../../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('../final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
         <div class="body">
-            <ul class="chan">
-              <li><a href="#">Current Locks</a></li>
-              <li>Current &amp; Pending Support</li>
-              <li><a href="#">Grants.gov Opportunity Lookup</a></li>
-              <li><a href="#">Non-employee Lookup</a></li>
-              <li><a href="#">Sponsor Lookup</a></li><li>Unit Hierarchy</li>
-            </ul>
+          <ul class="chan">
+            <li><a href="#">Current Locks</a></li>
+            <li>Current &amp; Pending Support</li>
+            <li><a href="#">Grants.gov Opportunity Lookup</a></li>
+            <li><a href="#">Keyword Lookup</a></li>
+            <li><a href="#">Non-employee Lookup</a></li>
+            <li><a href="#">Sponsor Lookup</a></li>
+            <li>Unit Hierarchy</li>
+          </ul>
         </div>
       </div>
           <div class="portlet">
