--- a/menu/kra_devref/researcher2.html
+++ b/menu/kra_devref/researcher2.html
@@ -51,7 +51,10 @@ function MM_popupMsg(msg) { //v1.0
           <div class="body">
             <ul class="chan">
               <li><a href="#">Create  Proposal</a></li>
-              <li> <a href="#">Proposals in Progress</a> </li>
+              <li> <a href="#">Proposals Enroute</a></li>
+              <li><a href="#">Proposals (Proposal Development documents)</a></li>
+              <li><a href="#"> Proposal Logs                </a></li>
+              <li><a href="#">Institutional Proposals </a></li>
               <li><a href="#">All My Proposals</a></li>
             </ul>
           </div>
