https://test.kuali.org/jira/browse/KRAFDBCK-3120
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6802 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/menu/kra_devref/researcher2.html
+++ b/menu/kra_devref/researcher2.html
@@ -48,16 +48,19 @@ function MM_popupMsg(msg) { //v1.0
               <h2 class="portlet-title">Proposals</h2>
             </div>
             </span> <span class="right"><a href="#"><img src="../../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('../final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
-          <div class="body">
+          <div class="body"><strong>Actions </strong>
             <ul class="chan">
               <li><a href="#">Create  Proposal</a></li>
-              <li> <a href="#">Proposals Enroute</a></li>
-              <li><a href="#">Proposals (Proposal Development documents)</a></li>
+            </ul>
+           <strong>Search </strong>
+            <ul class="chan">
+              <li><a href="#">All My Proposals</a></li>
+              <li> <a href="#">My Proposals Enroute</a></li>
+              <li><a href="#">Proposals</a></li>
               <li><a href="#"> Proposal Logs                </a></li>
               <li><a href="#">Institutional Proposals </a></li>
-              <li><a href="#">All My Proposals</a></li>
             </ul>
-          </div>
+</div>
         </div>
         <div class="portlet">
           <div class="header"> <span class="left">
