--- a/kra-pdb-dev/prop-propactions.html
+++ b/kra-pdb-dev/prop-propactions.html
@@ -305,14 +305,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </div>-->
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Print Forms</td>
+              <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Print</td>
               <td class="tabtable2-mid"><a href="#" id="A125" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F125" ></a></td>
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
           </table>
           <div class="tab-container" align="center" id="G125" style="display: none;">
             <div class="h2-container"> <span class="subhead-left">
-              <h2>Print Forms</h2>
+              <h2>Print</h2>
               </span><span class="subhead-right"> <span class="subhead"><a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
             <table  cellpadding="0" cellspacing="0"  summary="">
               <tr>
