--- a/kra-awa-dev/abud-personnel.html
+++ b/kra-awa-dev/abud-personnel.html
@@ -277,7 +277,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td><div align=left>26,066.64</div></td>
                 </tr>
                 <tr>
-                  <th><div align=right>&nbsp;Total Cost:</div></th>
+                  <th><div align=right>Total Sponsor Cost:</div></th>
                   <td colspan=3>189,848.42</td>
                 </tr>
               </table>
