--- a/kra-com-dev/irb-meeting.html
+++ b/kra-com-dev/irb-meeting.html
@@ -104,8 +104,7 @@ $("#showorange").html("<img src='../images/tinybutton-show.gif' alt='show/hide p
         <th scope=row><div align=right>Last Updated:</div></th>
         <td>10:06 AM 03/30/2005</td>
       </tr>
-      <tr>
-        <th class="bord-l" scope=row><div align=right>Protocol Type:</div></th>
+      <tr> <th class="bord-l" scope=row><div align=right>Committee ID:</div></th>
         <td class="datacell-l"></td>
         <th class="bord-l" scope=row><div align=right>Version:</div></th>
         <td class="datacell-l">1</td>
