--- a/kra-com-dev/irb-members.html
+++ b/kra-com-dev/irb-members.html
@@ -40,8 +40,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <th scope=row><div align=right>Last Updated:</div></th>
         <td>10:06 AM 03/30/2005</td>
       </tr>
-      <tr>
-        <th class="bord-l" scope=row><div align=right>Protocol Type:</div></th>
+      <tr> <th class="bord-l" scope=row><div align=right>Committee ID:</div></th>
         <td class="datacell-l"></td>
         <th class="bord-l" scope=row><div align=right>Version:</div></th>
         <td class="datacell-l">1</td>
