git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6808 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-com-dev/irb-actions.html
+++ b/kra-com-dev/irb-actions.html
@@ -145,7 +145,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
           <!-- TAB -->
-          <div class="tab-container" align=center id="G01" style="display: nonee;">
+          <div class="tab-container" align=center id="G01" style="display: none;">
          
             <div class="h2-container">
               <h2><span class="subhead-left"> Generate Batch Correspondance</span></h2>
@@ -177,7 +177,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <img src="../images/cal.gif" alt="calendar" width="16" height="16"></label></td>
                 </tr>
                 <tr>
-                  <td colspan="4"  align="right"><div align="center">&lt;submit&gt;</div></td>
+                  <td colspan="4"  align="right" class="infoline"><div align="center" style="padding:6px"><img src="../images/tinybutton-submit.gif" width="46" height="15" alt="submit"></div></td>
                 </tr>
               </tbody>
             </table>
@@ -687,7 +687,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align="center" id="G02" style="display: nonee;">
+          <div class="tab-container" align="center" id="G02" style="display: none;">
             <div class="h2-container">
               <h2><span class="subhead-left">Generate Correspondence</span></h2>
               <span class="subhead-right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick=&aring;"MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
@@ -697,8 +697,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><input src="../images/tinybutton-submit.gif" onclick="javascript: alert('This would cause a PDF file to be created and displayed in a separate browser window.'); return false" style="border:none;" alt="submit" title="Submit" type="image" /></td>
               </tr>
             </table>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
+          
           </div>
           <table width="100%" border="0" cellpAdding="0" cellspacing="0" class="b3" summary="">
             <tr>
