https://test.kuali.org/jira/browse/KRAFDBCK-3120
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6812 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-actions.html
+++ b/kra-ip-dev/1-prop-actions.html
@@ -279,36 +279,31 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <table  cellpadding="0" cellspacing="0"  summary="">
                
                 <tr>
-                  <td width="5%" class="tab-subhead" ><a href="#" id="A222" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align="absmiddle" id="F222"></a></td>
                   <td colspan="3" class="tab-subhead" >Print Notice</td>
                 </tr>
-                <tbody id="G222" style="display: none;">
+                <tbody id="G222" style="display:;">
                   <tr>
-                    <td align="left" >&nbsp;</td>
-                    <td colspan="2">Proposal Notice</td>
+                    <th colspan="2">Proposal Notice</th>
                     <td><div align=center><img src="../images/tinybutton-print.gif" alt="dsdfhg" width="42" height="15" vspace="5"></div></td>
                   </tr>
                 
                 </tbody>
                 <tr>
-                  <td class="tab-subhead" ><a href="#" id="A248" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align="absmiddle" id="F248"></a></td>
                   <td colspan="3" class="tab-subhead" >Print Reports</td>
                 </tr>
-                <tbody id="G248" style="display: none;">
+                <tbody id="G248" style="display:;">
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>Current Support Report</td>
-                    <td><div align="center"><span class="nowrap">
-                      <input name="incomeList[0].fin_object_cd232" size=30 value="" type=text id="person">
+                    <th>Current Support Report</th>
+                    <td><div align="center">Person: <span class="nowrap">
+                      <input name="incomeList[0].fin_object_cd232" size=14 value="" type=text id="person">
                       <input name="imageField2" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
                     </span></div></td>
                     <td><div align="center"><img src="../images/tinybutton-initiatereport.gif" alt="initiate report" width="80" height="15" vspace="5"></div></td>
                   </tr>
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>Pending Support Report</td>
-                    <td><div align="center"><span class="nowrap">
-                      <input name="incomeList[0].fin_object_cd232" size=30 value="" type=text id="person">
+                    <th>Pending Support Report</th>
+                    <td><div align="center">Person: <span class="nowrap">
+                      <input name="incomeList[0].fin_object_cd232" size=14 value="" type=text id="person">
                       <input name="imageField2" type=image class="tinybutton" src="../images/searchicon.gif" alt="person lookup">
                     </span></div></td>
                     <td><div align="center"><img src="../images/tinybutton-initiatereport.gif" alt="initiate report" width="80" height="15" vspace="5"></div></td>
