--- a/kra-irb-dev/irb-protocolactions.html
+++ b/kra-irb-dev/irb-protocolactions.html
@@ -4006,15 +4006,28 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <!-- Attachments -->
                 <table cellpadding=0 cellspacing=0 summary="">
                   <tr>
-                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Attachments:</td>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="5">Attachments:</td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">&nbsp;</th>
+                    <td class="infoline fineprint sequencetd" style="font-weight:bold; text-align:center; color:#333333;">File Name</td>
+                    <td class="infoline fineprint sequencetd" style="font-weight:bold; text-align:center; color:#333333;">Attachment Type</td>
+                    <td class="infoline fineprint sequencetd" style="font-weight:bold; text-align:center; color:#333333;">Description</td>
+                    <td class="infoline fineprint sequencetd" style="font-weight:bold; text-align:center; color:#333333;">Action</td>
                   </tr>
                   <tr>
                     <th style="width:50px;">1</th>
-                    <td><a href="#" onclick="javascript: alert('This would open the attachment.'); return false"><span class="sequencea">My Serious Document.doc</span></a></td>
+                    <td>My Serious Document.doc</td>
+                    <td>Type A</td>
+                    <td>This is an example document.</td>
+                    <td style="width:60px; text-align:center;"><input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would open the associated file.'); return false" style="border:none;" alt="view" title="View" type="image" /></td>
                   </tr>
                   <tr>
                     <th style="width:50px;">2</th>
-                    <td><a href="#" onclick="javascript: alert('This would open the attachment.'); return false"><span class="sequencea">My Silly Funding Plan.xls</span></a></td>
+                    <td>My Silly Funding Plan.xls</td>
+                    <td>Type B</td>
+                    <td>This is another example document.</td>
+                    <td style="width:60px; text-align:center;"><input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would open the associated file.'); return false" style="border:none;" alt="view" title="View" type="image" /></td>
                   </tr>
                 </table>
                 <!-- Funding Source -->
@@ -4368,15 +4381,28 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <!-- Attachments -->
                 <table cellpadding=0 cellspacing=0 summary="">
                   <tr>
-                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Attachments:</td>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="5">Attachments:</td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">&nbsp;</th>
+                    <td class="infoline fineprint sequencetd" style="font-weight:bold; text-align:center; color:#333333;">File Name</td>
+                    <td class="infoline fineprint sequencetd" style="font-weight:bold; text-align:center; color:#333333;">Attachment Type</td>
+                    <td class="infoline fineprint sequencetd" style="font-weight:bold; text-align:center; color:#333333;">Description</td>
+                    <td class="infoline fineprint sequencetd" style="font-weight:bold; text-align:center; color:#333333;">Action</td>
                   </tr>
                   <tr>
                     <th style="width:50px;">1</th>
-                    <td><a href="#" onclick="javascript: alert('This would open the attachment.'); return false"><span class="sequencea">My Serious Document.doc</span></a></td>
+                    <td>My Serious Document.doc</td>
+                    <td>Type A</td>
+                    <td>This is an example document.</td>
+                    <td style="width:60px; text-align:center;"><input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would open the associated file.'); return false" style="border:none;" alt="view" title="View" type="image" /></td>
                   </tr>
                   <tr>
                     <th style="width:50px;">2</th>
-                    <td><a href="#" onclick="javascript: alert('This would open the attachment.'); return false"><span class="sequencea">My Silly Funding Plan.xls</span></a></td>
+                    <td>My Silly Funding Plan.xls</td>
+                    <td>Type B</td>
+                    <td>This is another example document.</td>
+                    <td style="width:60px; text-align:center;"><input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would open the associated file.'); return false" style="border:none;" alt="view" title="View" type="image" /></td>
                   </tr>
                 </table>
                 <!-- Funding Source -->
