[BFN] https://test.kuali.org/jira/browse/KRAFUNC-283 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6819 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-nonpersbudget.html
+++ b/kra-awa-dev/abud-nonpersbudget.html
@@ -352,7 +352,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                               </div></td>
                             </tr>
                             <tr>
-                              <th><div align="right"> Budget Category Code </div></th>
+                              <th><div align="right">Budget Category</div></th>
                               <td><select name="document.budgetPeriods[0].budgetLineItems[0].budgetCategoryCode" tabindex="0">
                                   <option value="13">Equipment Rental</option>
                                   <option value="20" selected="selected">Equipment</option>
@@ -536,7 +536,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                               </div></td>
                             </tr>
                             <tr>
-                              <th><div align="right"> Budget Category Code </div></th>
+                              <th><div align="right">Budget Category</div></th>
                               <td><select name="document.budgetPeriods[0].budgetLineItems[0].budgetCategoryCode" tabindex="0">
                                   <option value="13">Equipment Rental</option>
                                   <option value="20" selected="selected">travel-domestic</option>
@@ -703,7 +703,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                               </div></td>
                             </tr>
                             <tr>
-                              <th><div align="right"> Budget Category Code </div></th>
+                              <th><div align="right">Budget Category</div></th>
                               <td><select name="document.budgetPeriods[0].budgetLineItems[0].budgetCategoryCode" tabindex="0">
                                   <option value="13">Equipment Rental</option>
                                   <option value="20" selected="selected">travel-domestic</option>
