https://test.kuali.org/jira/browse/KRAFUNC-243
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6823 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-com-dev/irb-committee.html
+++ b/kra-com-dev/irb-committee.html
@@ -41,9 +41,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <td>10:06 AM 03/30/2005</td>
       </tr>
       <tr> <th class="bord-l" scope=row><div align=right>Committee ID:</div></th>
-        <td class="datacell-l"></td>
-        <th class="bord-l" scope=row><div align=right>Version:</div></th>
-        <td class="datacell-l">1</td>
+        <td class="datacell-l">000025343</td>        <th class="bord-l" scope=row><div align=right>Committee Name:</div></th>
+        <td class="datacell-l">Committee name with sixty characters ici solet sed qualista</td>
       </tr>
     </table>
   </div>
