git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6836 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-corbatch1.html
+++ b/kra-irb-dev/irb-corbatch1.html
@@ -61,8 +61,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                               <option selected>select</option>
                               <option>Protocol Renewal Reminders</option>
                               <option>Reminder to IRB Notifications</option>
-                              <option>etc </option>
-                              <option>etc</option>
+                              <option>add... </option>
+                           
                             </select>
                           </span></td>
                           <td style="padding:8px"><strong> Correspondence Period:</strong><br>
