git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6837 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-corbatch1.html
+++ b/kra-irb-dev/irb-corbatch1.html
@@ -58,8 +58,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                           <td style="padding:8px"><span class="infoline"><strong>Correspondence
                             Type: </strong><br>
                             <select name="select" id="select">
-                              <option selected>select</option>
-                              <option>Protocol Renewal Reminders</option>
+                              <option>select</option>
+                              <option selected>Protocol Renewal Reminders</option>
                               <option>Reminder to IRB Notifications</option>
                               <option>add... </option>
                            
