git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6838 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-corbatch1.html
+++ b/kra-irb-dev/irb-corbatch1.html
@@ -93,8 +93,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <option>Send Renewal Reminder Letter #2</option>
                       <option>Send Renewal Reminder Letter #3</option>
                       <option>Send Renewal Reminder Letter #4</option>
-                      <option>Suspend Protocol</option>
-                      <option>Close Protocol</option>
+                      <option>Suspend Protocol (day 60 only)</option>
+                      <option>Close Protocol (day 60 only)</option>
                     </select>
                 </td>
                 <td class="infoline"><div align="center"><img src="../images/tinybutton-add1.gif" width="40" height="15" alt="add"></div></td>
