--- a/kra-irb-dev/irb-corbatch1.html
+++ b/kra-irb-dev/irb-corbatch1.html
@@ -78,7 +78,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 </div></td>
               </tr>
               <tr>
-                <th scope=col>On this Day</th>
+                <th scope=col>On or after this day</th>
                 <th scope=col>Take this Action</th>
                 <th scope=col>Actions</th>
               </tr>
@@ -126,8 +126,16 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <td><div align="center">60 
                     (of 60)</div></td>
-                <td>Close Protocol</td>
-                <td><div align="center"><img src="../images/tinybutton-delete1.gif" width="40" height="15" alt="add"></div></td>
+                <td><span class="infoline">
+                  <select name="select" id="select">
+                    <option>select</option>
+               
+                    <option selected>Suspend Protocol</option>
+                    <option>Close Protocol</option>
+                    <option>No Action</option>
+                  </select>
+                </span></td>
+                <td><div align="center"></div></td>
               </tr>
             </table>
        
@@ -146,6 +154,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
   </tr>
 </table>
-
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p><img src="Configure+Automatic+event-based+Notifications.jpg" width="383" height="316" alt="asdf"></p>
 </body>
 </html>
