https://test.kuali.org/jira/browse/KRAFUNC-243
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6842 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra/index.html
+++ b/kra/index.html
@@ -61,6 +61,7 @@ function MM_goToURL() { //v3.0
                       <p><a href="../kra-irb-dev/irb-protocol.html" target="_blank">IRB</a></p>
                       <p><a href="../kra-com-dev/irb-schedule.html" target="_blank">IRB - Committee</a></p>
                       <p><a href="../kra-com-dev/irb-meeting.html" target="_blank">IRB - Meeting Management</a></p>
+                      <p><a href="../kra-irb-dev/irb-corbatch1.html" target="_blank">IRB - Correspondence Batch</a></p>
                       <p><a href="../kra-cor-dev/correspondence.html" target="_blank">IRB - Correspondence</a></p>
                       <p><a href="../BFN/questionnaire-editor.html" target="_blank">Questionnaire Management</a></p>
                       <p><a href="../kra-awa-dev/aw-awards.html" target="_blank">Awards</a></p>
