git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6846 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ function MM_goToURL() { //v3.0
                   </div></td> 
                 </tr> 
               </table> 
-              <p>&nbsp; </p> 
+              <p>asdf</p> 
             </div></td> 
         </tr> 
       </table></td> 
