--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@ function MM_goToURL() { //v3.0
                   </div></td> 
                 </tr> 
               </table> 
-              <p>asdf</p> 
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
+              <p>updated Nov 22, 2010</p> 
             </div></td> 
         </tr> 
       </table></td> 
