git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6850 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kular/index.html
+++ b/kular/index.html
@@ -15,7 +15,7 @@
   <h2>KRAD - UI Development </h2>
   <p><a href="basic.html">Basic</a></p>
   <p><a href="red.html">Red</a></p>
-  <p><a href="blue.html">Blue</a></p>
+  <p><a href="blue.html">Blueee</a></p>
 </div>
 </body>
 </html>
