git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6859 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra/index.html
+++ b/kra/index.html
@@ -66,7 +66,8 @@ function MM_goToURL() { //v3.0
                       <p><a href="../kra-cor-dev/correspondence.html" target="_blank">IRB - Correspondence</a></p>
                       <p><a href="../BFN/questionnaire-editor.html" target="_blank">Questionnaire Management</a></p>
                       <p><a href="../kra-awa-dev/aw-awards.html" target="_blank">Awards</a></p>
-                      <p><a href="../kra-coi-bfn/coi-disclosure.html" target="_blank">Conflict of Interest</a><a href="#" target="_blank"></a></p>
+                      <p><a href="../kra-coi-bfn/coi-disclosure.html" target="_blank">Conflict of Interest</a><a href="#" target="_blank"></a> (12/2009)</p>
+                      <p><a href="../kra-coi-bfn-dec2010/coi-disclosure.html" target="_blank">Conflict of Interest</a><a href="#" target="_blank"></a> (12/2010)</p>
                     </div></td>
                 </tr>
               </table>
