--- a/kra-coi-bfn-dec2010/coi-disclosureactions.html
+++ b/kra-coi-bfn-dec2010/coi-disclosureactions.html
@@ -54,15 +54,24 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <div class="horz-links-bkgrnd" id="horz-links">
   <div id="tabs">
     <dl class="tabul">
-      <dt><span class="tabright">
+       <dt> <span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure">
-        </span></dt>
-      <dt class="licurrent"><span class="tabright tabcurrent">
+      </span></dt>
+       <dt class="licurrent"> <span class="tabright tabcurrent">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosureactions.html');return document.MM_returnValue" value="Disclosure Actions">
-        </span></dt>
-      <dt><span class="tabright">
+      </span></dt>
+      <dt> <span class="tabright">
         <input name="Submit" type="submit" onClick="javascript: alert('This would navigate to the as yet unbuilt COI Committee page.'); return false" value="Committee">
-        </span></dt>
+      </span></dt>
+      <dt> <span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-finanainterests.html');return document.MM_returnValue" value="Financial Interests">
+      </span></dt>
+      <dt> <span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-notesattach.html');return document.MM_returnValue" value="Notes &amp; Attachments">
+      </span></dt>
+      <dt> <span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-certification.html');return document.MM_returnValue" value="Certification">
+      </span></dt>
     </dl>
   </div>
 </div>
